--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="container-fluid">
-        <div class="circles"><img src="Profile.jpg" id="profilePic">
+        <div class="circles"><img src="ProfilePIC.png" id="profilePic">
         </div>
         <header>
             <h1>Hiyaaa! </h1>
